--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8" />
-    <title>Luther</title>
+    <title>PORTFOLIO</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -47,7 +47,7 @@
         ================================================== -->
       <header class="s-header">
         <div class="header-mobile">
-          <span class="mobile-home-link"><a href="index.html">Luther.</a></span>
+          <span class="mobile-home-link"><a href="index.html"></a></span>
           <a class="mobile-menu-toggle" href="#0"><span>Menu</span></a>
         </div>
 
